fix gap

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 .faqs__accordion {
   display: flex;
   flex-direction: column;
-  gap: 2.4rem;
+  gap: 2.1rem;
 }
 
 .faqs__accordion input {
